--- a/Assets/scss/components/_main-section.scss
+++ b/Assets/scss/components/_main-section.scss
@@ -1,3 +1,7 @@
+.main-container{
+    overflow: hidden;
+}
+
 .center-section{
 
     display: grid;
